Spacing Issue Fix

--- a/src/app/starttest/test-detail/test-detail.component.scss
+++ b/src/app/starttest/test-detail/test-detail.component.scss
@@ -19,6 +19,15 @@
   font-weight: 700;
 }
 
+.nativesubtitle {
+  font-size: 10px;
+  color: #474747 !important;
+  /* Lighter gray color */
+  margin-bottom: 4px;
+  margin-top: 24px;
+  font-weight: 700;
+}
+
 .title {
   font-size: 18px;
   font-weight: 700;
